--- a/connect-4/styles/main.css
+++ b/connect-4/styles/main.css
@@ -3,18 +3,39 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Cairo', sans-serif;
+  font-family: 'Syne Tactile', cursive;
   height: 100vh;
-
-  margin: 0;
 }
 h1 {
+  text-transform: uppercase;
   text-align: center;
+  margin: 20px;
+  font-size: 100px;
 }
 .grid-wrapper {
-  height: 90vh;
-
+  height: 700px;
   display: flex;
-  justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
+  flex-direction: column;
+  margin-bottom: 40px;
+  margin-top: 20px;
+}
+.button {
+  width: 630px;
+}
+.button button {
+  width: 80px;
+  height: 80px;
+  margin: 5px;
+  padding: 10px;
+  border: none;
+  background: transparent;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
 .grid {
@@ -22,18 +43,19 @@ h1 {
   flex-wrap: wrap;
   height: 540px;
   width: 630px;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 10px 10px 20px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  background-color: rgb(224, 248, 3);
+  background-color: white;
 }
 
 .grid div {
-  border: 1px solid lightgrey;
-  height: 14.816%;
-  width: 12.7%;
+  border: 2px solid rgb(5, 5, 5);
+  height: 80px;
+  width: 80px;
   border-radius: 50%;
   margin: 5px;
 }
+
 .red-counter {
   background: red;
   border-radius: 50%;
@@ -45,10 +67,62 @@ h1 {
 .button-wrapper {
   display: flex;
   justify-content: space-around;
-  /* padding: 40px; */
+  /* padding-bottom: 100px;
+  padding-top: 50px; */
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
-
+.button-wrapper button {
+  font-family: 'Cairo', sans-serif;
+  font-family: 'Syne Tactile', cursive;
+  font-size: 20px;
+  text-transform: uppercase;
+  box-shadow: 10px 10px 20px 10px rgba(0, 0, 0, 0.2);
+  border: none;
+  border-radius: 5px;
+  background-color: rgb(0, 0, 0);
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+}
 div.results {
   margin: 50px;
   text-align: center;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+hr {
+  width: 85%;
+}
+footer {
+  display: flex;
+  justify-content: space-around;
+  padding: 30px 0px;
+  font-family: 'Courier New', Courier, monospace;
+}
+.cr {
+  padding: 30px;
+}
+.name {
+  padding: 30px;
+  margin-left: -80px;
+}
+.linkedin-logo {
+  height: 70px;
+  width: 85px;
+}
+span {
+  color: red;
+  font-weight: bolder;
+}
+button.computer-button {
+  transition: 0.05s;
+}
+button.computer-button:hover {
+  font-size: 0;
+}
+button.computer-button:hover:after {
+  content: 'coming soon!';
+  font-size: 20px;
+  color: red;
 }
